<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RaspPiMusicController</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="btn_next_str">Next</string>
    <string name="btn_prev_str">Prev</string>
    <string name="btn_connect">Connect</string>
    <string name="txtview_curr_title">Current Title</string>
    <string name="txtview_curr_artist">Current Artist </string>
    <string name="txtview_curr_album">Current Album </string>
    <string name="etxt_hint_connect">Server\'s IP Address</string>

</resources>
