<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rasppi.musiccontroller.MainActivity$PlaceholderFragment" >

    <View
        android:id="@+id/base_center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="btnConnect"
        android:text="@string/btn_connect" />

    <EditText
        android:id="@+id/etxt_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConnect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/etxt_hint_connect" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt_current_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dd_playlist"
        android:layout_toRightOf="@+id/base_center"
        android:paddingBottom="10dp"
        android:text="@string/txtview_curr_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_current_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_current_title"
        android:layout_toRightOf="@+id/base_center"
        android:paddingBottom="10dp"
        android:text="@string/txtview_curr_artist"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_current_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_current_artist"
        android:layout_toRightOf="@+id/base_center"
        android:paddingBottom="10dp"
        android:text="@string/txtview_curr_album"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/ibtn_pause_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etxt_ip_address"
        android:layout_alignLeft="@+id/btn_prev"
        android:onClick="btnPausePlay"
        android:src="@drawable/play" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_above="@+id/ibtn_pause_play"
        android:layout_alignRight="@+id/ibtn_pause_play"
        android:layout_toRightOf="@+id/base_center"
        android:onClick="nextTitle"
        android:src="@drawable/next" />

    <ImageButton
        android:id="@+id/btn_prev"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_below="@+id/dd_playlist"
        android:layout_above="@+id/ibtn_pause_play"
        android:layout_alignLeft="@+id/etxt_ip_address"
        android:layout_alignTop="@+id/btn_next"
        android:layout_toLeftOf="@+id/base_center"
        android:onClick="prevTitle"
        android:src="@drawable/prev" />

    <Spinner
        android:id="@+id/dd_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section_label"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <SeekBar
        android:id="@+id/sb_playtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible" />
      
</RelativeLayout>
